--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -47,7 +47,7 @@
         </mat-form-field>
       </div>
       <div class="dropdown-wrapper">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="calendar">
           <mat-label>From</mat-label>
           <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt" (ngModelChange)="onFromDateChange()">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -55,7 +55,7 @@
         </mat-form-field>
       </div>
       <div class="dropdown-wrapper">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="calendar">
             <mat-label>To</mat-label>
           <input matInput [matDatepicker]="picker2" placeholder="To" [(ngModel)]="toDt">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
@@ -63,8 +63,8 @@
         </mat-form-field>
       </div>
       <div class="dropdown-wrapper text-end">
-        <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="icon-btn">
-          <mat-icon>search</mat-icon> search
+        <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
+          <mat-icon>search</mat-icon>
         </button>
       </div>
     </div>
