--- a/ClientApp/src/app/Forms/Master/brokerage-setup/lock-brokerage/lock-brokerage.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/lock-brokerage/lock-brokerage.component.html
@@ -10,7 +10,7 @@
         <div class="tab-party-details-parent">
             <div class="dropdown-wrapper">
                 <mat-form-field appearance="outline">
-                  <mat-label>Loack Brokerage</mat-label>
+                  <mat-label>Lock Brokerage</mat-label>
                   <input matInput [matDatepicker]="lockPicker" formControlName="lockBrokDate">
                   <mat-datepicker-toggle matSuffix [for]="lockPicker"></mat-datepicker-toggle>
                   <mat-datepicker #lockPicker></mat-datepicker>
