--- a/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-add-setup-details/sub-add-setup-details.component.html
+++ b/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-add-setup-details/sub-add-setup-details.component.html
@@ -1,10 +1,10 @@
 <h2 class="heading" *ngIf="isEditMode == 0; else modifyEditHeading">
-  Add Brokerage
-</h2>
-<ng-template #modifyEditHeading>
-  <h2 class="heading" *ngIf="isEditMode == 1">Modify Brokerage</h2>
-  <h2 class="heading" *ngIf="isEditMode == 2">Edit Brokerage</h2>
-</ng-template>
+    Add Sub Brokerage
+  </h2>
+  <ng-template #modifyEditHeading>
+    <h2 class="heading" *ngIf="isEditMode == 1">Modify Sub Brokerage</h2>
+    <h2 class="heading" *ngIf="isEditMode == 2">Edit Sub Brokerage</h2>
+  </ng-template>
 <a (click)="close()" class="close-btn">
   <span class="material-symbols-outlined">
     <mat-icon>close</mat-icon>
@@ -12,7 +12,7 @@
 </a>
 <form [formGroup]="itemForm" (ngSubmit)="onSubmit(itemForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
-        <h3><span>Brokerage</span></h3>
+        <h3><span>Sub Brokerage</span></h3>
         <div class="tab-party-details-parent">
               <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field class="example-full-width" appearance="outline">
@@ -52,21 +52,6 @@
                     <mat-error *ngIf="itemForm.controls.intradayBrokRate.errors?.required">IntraDayBrokeRate is required</mat-error>                
                 </mat-form-field> 
             </div>
-              <!-- <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field appearance="outline">
-                    <mat-label>Range1</mat-label>
-                    <input matInput autocomplete="off" placeholder="Range2" formControlName="rateRange1" type="number">
-                    <mat-error *ngIf="itemForm.controls.rateRange1.errors?.required">Range1 is required</mat-error>                
-                </mat-form-field> 
-            </div>
-
-            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field appearance="outline">
-                    <mat-label>Range2</mat-label>
-                    <input matInput autocomplete="off" placeholder="Range" formControlName="rateRange2" type="number">
-                    <mat-error *ngIf="itemForm.controls.rateRange2.errors?.required">Range2 is required</mat-error>                
-                </mat-form-field> 
-            </div> -->
             
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-5 pb-5 pl-10">
                 <mat-checkbox formControlName="intradaySingleSideonly">Intradaysingleside</mat-checkbox>
