--- a/ClientApp/src/app/Forms/Master/sharing-setup/sharing-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/sharing-setup/sharing-setup.component.html
@@ -55,7 +55,7 @@
           </mat-form-field>
         </div>
         <div class="dropdown-wrapper text-end">
-          <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
+          <button mat-raised-button color="primary" (click)="getBrokerageSetupList()" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
             <mat-icon>search</mat-icon>
           </button>
         </div>
@@ -63,15 +63,15 @@
       <div class="row">
         <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
           <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn">
-            <mat-icon>lock</mat-icon> Lock Brokerage
+            <mat-icon>lock</mat-icon> Lock Sharing
           </button>
-          <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog(null)" class="icon-btn ml-15">
+          <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn ml-15">
             <mat-icon>edit</mat-icon> Modify
           </button>
         </div>
         <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" class="text-end">
           <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
-            <mat-icon>add</mat-icon> Add Brokerage
+            <mat-icon>add</mat-icon> Add Sharing
           </button>
         </div>
       </div>
