--- a/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
@@ -25,7 +25,7 @@
           </mat-form-field>
         </div>
         <div class="dropdown-wrapper">
-          <mat-icon class="info-icon" (click)="viewAllItemGroups(null)" matTooltip="View All Item" matTooltipPosition="above">info</mat-icon>
+          <mat-icon class="info-icon" (click)="viewAllItemGroups()" matTooltip="View All Item" matTooltipPosition="above">info</mat-icon>
           <mat-form-field class="select-slab-mat" appearance="outline">
             <mat-label>Select Item Group *</mat-label>
             <mat-select #select  [(ngModel)]="itemGroupIds" placeholder="Select Item Group" panelClass="custom-select-panel">
@@ -63,7 +63,7 @@
           </mat-form-field>
         </div>
         <div class="dropdown-wrapper text-end">
-          <button mat-raised-button color="primary" (click)="getBrokerageSetupList(null)" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
+          <button mat-raised-button color="primary" (click)="getBrokerageSetupList()" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
             <mat-icon>search</mat-icon>
           </button>
         </div>
@@ -71,15 +71,15 @@
       <div class="row">
         <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
           <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn">
-            <mat-icon>lock</mat-icon> Lock Brokerage
+            <mat-icon>lock</mat-icon> Lock Sub Brokerage
           </button>
-          <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog(null)" class="icon-btn ml-15">
+          <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn ml-15">
             <mat-icon>edit</mat-icon> Modify
           </button>
         </div>
         <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" class="text-end">
           <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
-            <mat-icon>add</mat-icon> Add Brokerage
+            <mat-icon>add</mat-icon> Add Sub Brokerage
           </button>
         </div>
       </div>
