--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -1,94 +1,76 @@
 
 
-<form [formGroup]="voucherForm" (ngSubmit)="onSubmit()">
-
-  <div class="dropdown-container">
-    <div class="dropdown-wrapper">
-      <mat-form-field class="select-slab-mat" appearance="outline">
-        <mat-label>Vou Type</mat-label>
-        <mat-select #select formControlName="VouType" placeholder="Select VouType" panelClass="custom-select-panel">
-
-          <!--<mat-option *ngFor="let option of filteredProviders" [value]="option.id">
-            {{ option.name }}
-          </mat-option>-->
-        </mat-select>
-      </mat-form-field>
-    </div>
-
-    <div class="dropdown-wrapper">
-      <mat-form-field appearance="outline" class="calendar">
-        <mat-label>VouDate</mat-label>
-        <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate">
-        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-        <mat-datepicker #picker2></mat-datepicker>
-      </mat-form-field>
-    </div>
-    <div class="dropdown-wrapper">
-      <mat-form-field class="select-slab-mat" appearance="outline">
-        <mat-label>Contra Account</mat-label>
-        <mat-select #select formControlName="ContraAc" placeholder="Select ContraAc" panelClass="custom-select-panel">
-
-          <!--<mat-option *ngFor="let option of filteredProviders" [value]="option.id">
-            {{ option.name }}
-          </mat-option>-->
-        </mat-select>
-      </mat-form-field>
-    </div>
-
-  </div>
-
-  <div formArrayName="vouDetails">
-    <div *ngFor="let detail of vouDetails().controls; let detailIndex=index">
-      <div [formGroupName]="detailIndex">
-
+<form [formGroup]="voucherForm" (ngSubmit)="onSubmit()" class="pt-10"> 
+  <div class="flex-p">
+    <mat-card-content class="voucher-form">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>Voucher Entry</mat-panel-title>
+        </mat-expansion-panel-header>                    
         <div class="dropdown-container">
           <div class="dropdown-wrapper">
             <mat-form-field class="select-slab-mat" appearance="outline">
-              <mat-label>Account</mat-label>
-              <mat-select #select formControlName="Account" placeholder="Select Account" panelClass="custom-select-panel">
-
-                <!--<mat-option *ngFor="let option of filteredProviders" [value]="option.id">
-                  {{ option.name }}
-                </mat-option>-->
+              <mat-label>Vou Type</mat-label>
+              <mat-select #select formControlName="VouType" placeholder="Select VouType" panelClass="custom-select-panel">
               </mat-select>
             </mat-form-field>
           </div>
-
-          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-            <mat-form-field appearance="outline">
-              <mat-label>Amount</mat-label>
-              <input matInput autocomplete="off" placeholder="Amount" formControlName="Amount" type="number">
-
+          <div class="dropdown-wrapper">
+            <mat-form-field appearance="outline" class="calendar">
+              <mat-label>VouDate</mat-label>
+              <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate">
+              <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+              <mat-datepicker #picker2></mat-datepicker>
             </mat-form-field>
           </div>
-
           <div class="dropdown-wrapper">
             <mat-form-field class="select-slab-mat" appearance="outline">
-              <mat-label>DR/CR</mat-label>
-              <mat-select #select formControlName="DRCR" placeholder="Select DRCR" panelClass="custom-select-panel">
-                <mat-option [value]="DR">DR</mat-option>
-                <mat-option [value]="CR">CR</mat-option>
-
+              <mat-label>Contra Account</mat-label>
+              <mat-select #select formControlName="ContraAc" placeholder="Select ContraAc" panelClass="custom-select-panel">
               </mat-select>
             </mat-form-field>
           </div>
-
-          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-            <mat-form-field appearance="outline">
-              <mat-label>Narration</mat-label>
-              <input matInput autocomplete="off" placeholder="Narration" formControlName="Narration" type="text">
-
-            </mat-form-field>
-          </div>
-
         </div>
-
-        <button (click)="removeVouDetail(detailIndex)">Remove</button>
-      </div>
-    </div>
-    <button type="button" (click)="addVouDetail()">Add Employee</button>
+        <div formArrayName="vouDetails">
+          <div *ngFor="let detail of vouDetails().controls; let detailIndex=index">
+            <div [formGroupName]="detailIndex">
+              <div class="dropdown-container">
+                <div class="dropdown-wrapper">
+                  <mat-form-field class="select-slab-mat mb-0" appearance="outline">
+                    <mat-label>Account</mat-label>
+                    <mat-select #select formControlName="Account" placeholder="Select Account" panelClass="custom-select-panel">
+                    </mat-select>
+                  </mat-form-field>
+                </div>      
+                <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="30">
+                  <mat-form-field appearance="outline" class="form-control">
+                    <mat-label>Amount</mat-label>
+                    <input matInput autocomplete="off" placeholder="Amount" formControlName="Amount" type="number">      
+                  </mat-form-field>
+                </div>      
+                <div class="dropdown-wrapper">
+                  <mat-form-field class="select-slab-mat mb-0" appearance="outline">
+                    <mat-label>DR/CR</mat-label>
+                    <mat-select #select formControlName="DRCR" placeholder="Select DRCR" panelClass="custom-select-panel">
+                      <mat-option [value]="DR">DR</mat-option>
+                      <mat-option [value]="CR">CR</mat-option>      
+                    </mat-select>
+                  </mat-form-field>
+                </div>      
+                <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+                  <mat-form-field appearance="outline">
+                    <mat-label>Narration</mat-label>
+                    <input matInput autocomplete="off" placeholder="Narration" formControlName="Narration" type="text">      
+                  </mat-form-field>
+                </div>
+                <button mat-raised-button color="warn" (click)="removeVouDetail(detailIndex)">Remove</button>        
+                <button mat-raised-button color="primary" type="button" (click)="addVouDetail()">Add Employee</button>                   
+              </div>              
+            </div>
+          </div>          
+        </div>
+      </mat-expansion-panel>
+    </mat-card-content>
   </div>
-
-
 </form>
 
