--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -34,7 +34,9 @@ $material-icons-font-path: '~material-icons/iconfont/';
 body {
     font-family: 'Montserrat', sans-serif !important;
 }
-
+.mb-0 {
+    margin-bottom: 0 !important;
+}
 .ml-7 {
     margin-left: 7px !important;
 }
@@ -471,9 +473,6 @@ input {
                         margin-top: 0;
                     }
                 }
-                // .mat-form-field-flex {
-                //     padding-right: 0;
-                // }
                 .mat-form-field-infix {
                     font-size: 13px;
                     padding: 12px 0 8px 0;
@@ -520,6 +519,57 @@ input {
                 }
             }
         }
+    }
+}
+
+// .voucher-form {
+//     .mat-form-field {
+//         &.mat-form-field-appearance-outline {
+//             .mat-form-field-wrapper {
+//                 padding: 5px;
+//             }
+//         }
+//     }
+// }
+
+// .voucher-form {
+//     .mat-form-field {
+//         &.mat-form-field-appearance-outline {
+//             .mat-form-field-infix {
+//                 font-size: 13px;
+//                 padding: 12px 0 8px 0;
+//                 border: 0;
+//             }
+//         }
+//     }
+//     .dropdown-container {
+//         .dropdown-wrapper {
+//             .mat-form-field-appearance-outline {
+//                 .mat-form-field-infix {
+//                     font-size: 13px;
+//                     padding: 12px 0 8px 0;
+//                     border: 0;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+.voucher-form {
+    .mat-form-field-appearance-outline {
+        .mat-form-field-infix {
+            padding: 4px 0 10px 0;
+        }
+        .mat-form-field-wrapper {
+            padding-bottom: 0;
+            margin: 0;
+        }
+        .mat-form-field-label {
+            top: 1.25rem;
+        }
+    }
+    .form-control {
+        width: 95%;
     }
 }
 
