--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -55,13 +55,13 @@
                     </mat-select>
                   </mat-form-field>
                 </div>      
-                <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="60">
+                <div fxFlex="100" fxFlex.gt-sm="35" fxFlex.sm="35">
                   <mat-form-field appearance="outline">
                     <mat-label>Narration</mat-label>
                     <input matInput autocomplete="off" placeholder="Narration" formControlName="Narration" type="text">      
                   </mat-form-field>
-                </div>  
-                <div>                      
+                </div>   
+                <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15" class="text-end">                      
                   <button mat-raised-button color="primary" type="button" (click)="addVouDetail()">
                     <mat-icon>add</mat-icon>
                   </button>  
