--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+  <div fxLayout="row" fxLayoutAlign="space-between start" class="mt-2">
     <div class="dropdown-container">
       <div class="dropdown-wrapper">
         <mat-form-field class="select-slab-mat" appearance="outline">
