--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -710,5 +710,8 @@ input {
     }
 }
 
+.ag-paging-panel {
+    height: 40px;
+}
 
 //ag-row-no-focus ag-row ag-row-level-0 ag-row-position-absolute ag-row-last
