--- a/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
@@ -91,13 +91,13 @@
         </button>
       </div>
       <div class="btn-group">
-        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn">
+        <button mat-raised-button color="accent" matTooltip="Lock Sub Brokerage" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('lock')" class="icon-btn">
           <mat-icon class="lock-icon">lock</mat-icon>
         </button>
-        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn">
+        <button mat-raised-button color="accent" matTooltip="Modify Sub Brokerage" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn">
           <mat-icon class="edit-icon">edit</mat-icon>
         </button>
-        <button mat-raised-button color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
+        <button mat-raised-button color="accent" matTooltip="Add Sub Brokerage" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
           <mat-icon>add</mat-icon>
         </button>
       </div>
