--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -6,36 +6,45 @@
           <mat-panel-title>Voucher Entry</mat-panel-title>
         </mat-expansion-panel-header>                    
         <div class="dropdown-container">
-          <div class="dropdown-wrapper">
-            <mat-form-field class="select-slab-mat" appearance="outline">
-              <mat-label>Vou Type</mat-label>
-              <mat-select #select formControlName="VouType" placeholder="Select VouType" panelClass="custom-select-panel">
-                <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputVouTypeListChange($event)"/>
-                <mat-option *ngFor="let option of filteredVouTypeList" [value]="option.id">
-                  {{ option.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="20">
+            <div class="dropdown-wrapper">
+              <mat-form-field class="select-slab-mat" appearance="outline">
+                <mat-label>Vou Type</mat-label>
+                <mat-select #select formControlName="VouType" placeholder="Select VouType" panelClass="custom-select-panel">
+                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputVouTypeListChange($event)"/>
+                  <mat-option *ngFor="let option of filteredVouTypeList" [value]="option.id">
+                    {{ option.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
           </div>
-          <div class="dropdown-wrapper">
-            <mat-form-field appearance="outline" class="calendar">
-              <mat-label>VouDate</mat-label>
-              <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate">
-              <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-              <mat-datepicker #picker2></mat-datepicker>
-            </mat-form-field>
+          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="20">
+            <div class="dropdown-wrapper">
+              <mat-form-field appearance="outline" class="calendar">
+                <mat-label>VouDate</mat-label>
+                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate">
+                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                <mat-datepicker #picker2></mat-datepicker>
+              </mat-form-field>
+            </div>
           </div>
-          <div class="dropdown-wrapper">
-            <mat-form-field class="select-slab-mat" appearance="outline">
-              <mat-label>Contra Account</mat-label>
-              <mat-select #select formControlName="ContraAc" placeholder="Select ContraAc" panelClass="custom-select-panel">
-                <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
-                <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
-                  {{ option.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
+          <div fxFlex="100" fxFlex.gt-sm="45.5" fxFlex.sm="45.5">
+            <div class="dropdown-wrapper">
+              <mat-form-field class="select-slab-mat" appearance="outline">
+                <mat-label>Contra Account</mat-label>
+                <mat-select #select formControlName="ContraAc" placeholder="Select ContraAc" panelClass="custom-select-panel">
+                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
+                  <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
+                    {{ option.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>  
+          <div fxFlex="100" fxFlex.gt-sm="14.5" fxFlex.sm="14.5" class="text-end">
+            <button mat-raised-button color="primary" class="uppercase" [disabled]="!voucherForm.valid" type="submit">Save</button>
+          </div>       
         </div>
         <div formArrayName="vouDetails">
           <div *ngFor="let detail of vouDetails().controls; let detailIndex=index" class="mb-10">
@@ -85,7 +94,6 @@
             </div>
           </div>          
         </div>
-        <button mat-raised-button color="primary" class="uppercase" [disabled]="!voucherForm.valid" type="submit">Save</button>
       </mat-expansion-panel>
     </mat-card-content>
   </div>
